cambios en styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ body {
   white-space: nowrap !important;
   border: 0 !important;
 }
-/*Cierre estilos carrusel desde bootstrap*/*/
+/*Cierre estilos carrusel desde bootstrap*/
 
 div {
   margin: 20px;
