--- a/vivero-grid.css
+++ b/vivero-grid.css
@@ -31,7 +31,7 @@ main {
     "side article3";
   column-gap: 3px;
   row-gap: 3px;
-  background-image: url(/media/fondo1.jpeg);
+  background-image: url(fondo1.jpeg);
   background-attachment: fixed;
 }
 
