--- a/vivero-grid.css
+++ b/vivero-grid.css
@@ -101,7 +101,7 @@ p {
   }
 }
 
-@media (max-width: 405px) {
+@media (max-width: 420px) {
   .grid-container {
     grid-template-columns: 100%;
     grid-template-rows: 300px 300px 300px 380px 300px;
@@ -113,6 +113,10 @@ p {
       "article3";
     column-gap: 1px;
     row-gap: 1px;
+  }
+  .grid-item {
+height: 90%;
+  }
   }
 }
 
