--- a/tienda-bootstrap.css
+++ b/tienda-bootstrap.css
@@ -182,6 +182,8 @@ figcaption{
   font-size: medium;
 }
 
+/* Color de fondo. 
+Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el sistema iOS en diferentes dispositivos (iPhone, iPad) no reconocían esta configuración, y se veía una imagen sin movimiento al scrollear y al repetirse hacía saltos, por lo que tuve que volver a colocar el fondo de color plano"*/
 main{
   background-color: rgb(192, 247, 192);
 }
