--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -1,36 +1,181 @@
-* {
-  /* estilos genericos */
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-}
+@import "queries";
+@import "reset";
+@import "variables";
+@import "carousel";
+@import "conditionals";
+@import "bucles";
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,700;1,300;1,700&display=swap");
+
+$Font-title: bolder, "Josefin Sans", sans-serif;
+$Font-paragraph: lighter, "Josefin Sans", sans-serif;
+$tamano-gral: 10px;
 
 html {
   scroll-behavior: smooth;
 }
 
-@font-face {
-  font-family: "Pompiere";
-  src: url("Pompiere-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Dosis";
-  src: url("Dosis-VariableFont_wght.ttf");
-}
-
 body {
-  font-family: "Pompiere";
+  font-family: $Font-paragraph;
+
+  div {
+    margin: $tamano-gral * 3;
+    padding: $tamano-gral;
+  }
+
+  a {
+    text-decoration: none;
+
+    &:hover {
+      font-size: 1.3em;
+      color: rgb(122, 122, 243);
+    }
+
+    &:active {
+      background-color: rgb(129, 233, 190);
+    }
+
+    &:visited {
+      background-color: rgb(1, 1, 87);
+    }
+  }
+}
+
+.navbar {
+  display: flex;
+  position: sticky;
+  top: 0;
+  font-weight: bold;
+  justify-content: space-between;
+  align-items: center;
+  padding: $tamano-gral;
+  background-color: rgb(250, 250, 250);
+  opacity: 100%;
+  z-index: 10;
+  font-family: $Font-title;
+
+  .nav-item {
+    padding: 0px 1.2em 0px 1.2em;
+    font-size: 1.3em;
+    display: inline-block;
+  }
+
+  #check-menu,
+  label.menu {
+    display: none;
+  }
 }
 
 .titulo-header {
-  /* Estilo para slogan del comercio "todo para tu jardín, en un solo lugar"*/
+  /* Estilo para slogan del comercio " todo para
+    tu jardín,
+  en un solo lugar
+    "*/
   color: green;
   text-align: center;
   font-size: x-large;
   font-style: italic;
   background-color: rgb(250, 250, 250);
-  padding: 15px;
-  font-family: "Dosis";
+  padding: $tamano-gral + 5;
+  font-family: $Font-title;
+}
+
+h2 {
+  /* Estilo para títulos de secciones*/
+  color: green;
+  text-align: center;
+  background-color: rgb(43, 233, 128);
+  padding: $tamano-gral + 3;
+  font-family: $Font-title;
+}
+
+h3 {
+  text-align: center;
+  padding-top: $tamano-gral;
+  padding-bottom: $tamano-gral + 10;
+  font-family: $Font-title;
+}
+
+/* Diferentes fondos para las secciones en index.html
+Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el sistema iOS en diferentes dispositivos (iPhone, iPad) no reconocían esta configuración, y se veía una imagen sin movimiento al scrollear y al repetirse hacía saltos, por lo que tuve que volver a colocar el fondo de color plano" */
+
+#Vivero {
+  background-color: rgb(117, 248, 176);
+}
+
+#Tienda {
+  background-color: rgb(192, 247, 192);
+}
+
+#Servicios {
+  background-color: rgb(207, 247, 207);
+
+  .Servicios {
+    width: 30%;
+  }
+
+  p {
+    font-family: $Font-paragraph;
+    text-align: center;
+    padding: $tamano-gral + 5;
+  }
+
+  .icon-serv {
+    text-align: center;
+    font-size: xx-large;
+    padding: $tamano-gral - 5;
+    margin: 0;
+  }
+}
+
+#Contacto {
+  background-color: rgb(225, 247, 225);
+
+  .contacto-whatsapp {
+    background-color: white;
+    padding: $tamano-gral - 4;
+  }
+
+  .Contacto-hijo {
+    background-color: white;
+    height: 450px;
+  }
+}
+
+.boton-inicio {
+  padding: $tamano-gral + 5;
+}
+
+footer {
+  height: 5rem;
+
+  ul {
+    align-items: start;
+    font-size: small;
+  }
+
+  span {
+    width: 40%;
+    font-family: $Font-paragraph;
+    font-weight: lighter;
+    font-size: small;
+    justify-content: end;
+  }
+}
+
+article {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.imagenCategorias {
+  border-width: 4px;
+  border-color: rgba(139, 85, 2, 0.548);
+  border-style: groove;
+  border-radius: 5px;
+
+  &:hover {
+    opacity: 40%;
+  }
 }
