--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -4,6 +4,7 @@
 @import "conditionals";
 @import "bucles";
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,700;1,300;1,700&display=swap");
+@import "queries";
 
 $Font-title: bolder, "Josefin Sans", sans-serif;
 $Font-paragraph: lighter, "Josefin Sans", sans-serif;
@@ -47,7 +48,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: $tamano-gral;
-  background-color: rgb(250, 250, 250);
+  background-color: $navbar-color;
   opacity: 100%;
   z-index: 10;
   font-family: $Font-title;
@@ -97,18 +98,18 @@ h3 {
 /* Diferentes fondos para las secciones en index.html
 Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el sistema iOS en diferentes dispositivos (iPhone, iPad) no reconocían esta configuración, y se veía una imagen sin movimiento al scrollear y al repetirse hacía saltos, por lo que tuve que volver a colocar el fondo de color plano" */
 
-#Vivero {
-  background-color: rgb(117, 248, 176);
+#vivero {
+  background-color: $color-primaverano1; /*Uso de variable*/
 }
 
-#Tienda {
-  background-color: rgb(192, 247, 192);
+#tienda {
+  background-color: $color-primaverano2;
 }
 
-#Servicios {
-  background-color: rgb(207, 247, 207);
+#servicios {
+  background-color: $color-primaverano3;
 
-  .Servicios {
+  .servicios {
     width: 30%;
   }
 
@@ -126,15 +127,15 @@ Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el siste
   }
 }
 
-#Contacto {
-  background-color: rgb(225, 247, 225);
+#contacto {
+  background-color: $color-primaverano4;
 
   .contacto-whatsapp {
     background-color: white;
     padding: $tamano-gral - 4;
   }
 
-  .Contacto-hijo {
+  .contacto-hijo {
     background-color: white;
     height: 450px;
   }
@@ -179,4 +180,32 @@ article {
   }
 }
 
-@import "queries";
+@media (max-width: 720px) {
+  .navbar ul {
+    display: none;
+    position: absolute;
+    top: 80px;
+    width: 20%;
+    height: 150px;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: rgb(250, 250, 250);
+  }
+
+  label.menu {
+    display: block;
+    font-size: 1.7em;
+    color: lightgreen;
+    cursor: pointer;
+  }
+
+  #check-menu:checked ~ ul {
+    display: block;
+    flex-direction: column;
+  }
+
+  footer span {
+    width: 100%;
+    text-align: center;
+  }
+}
