--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   list-style: none;
 }
 
+/* Colores de fondo de secciones en index y resto de las páginas*/
 .carousel {
   position: relative;
 }
@@ -243,6 +244,82 @@
   border: 0 !important;
 }
 
+.navbar {
+  background-color: rgba(250, 238, 238, 0.979);
+}
+
+.titulo-tamano-4 {
+  font-size: 29px;
+}
+
+.titulo-tamano-3 {
+  font-size: 28px;
+}
+
+.titulo-tamano-2 {
+  font-size: 27px;
+}
+
+.titulo-tamano-1 {
+  font-size: 26px;
+}
+
+@media (max-width: 945px) {
+  article {
+    flex-direction: row;
+  }
+  .imagenCategorias {
+    width: 100%;
+  }
+  .Servicios {
+    width: 80%;
+  }
+  .contactoMedia {
+    flex-direction: row;
+  }
+  .Contacto-hijo {
+    width: 30%;
+  }
+  iframe {
+    width: 100%;
+  }
+  form input {
+    width: 100%;
+  }
+  form textarea {
+    width: 100%;
+  }
+}
+@media (max-width: 711px) {
+  .contactoMedia {
+    flex-direction: column;
+    margin: 6px;
+  }
+  .Contacto-hijo {
+    width: 100%;
+  }
+  #Contacto {
+    height: 1600px;
+  }
+}
+@media (max-width: 500px) {
+  .navbar ul {
+    width: 30%;
+  }
+}
+@media (max-width: 480px) {
+  article {
+    flex-direction: column;
+  }
+  .titulo-header {
+    font-size: 100%;
+  }
+}
+@media (max-width: 320px) {
+  .navbar ul {
+    width: 50%;
+  }
+}
 html {
   scroll-behavior: smooth;
 }
@@ -276,7 +353,7 @@ body a:visited {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: rgb(250, 250, 250);
+  background-color: "standard";
   opacity: 100%;
   z-index: 10;
   font-family: bolder, "Josefin Sans", sans-serif;
@@ -323,40 +400,40 @@ h3 {
 
 /* Diferentes fondos para las secciones en index.html
 Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el sistema iOS en diferentes dispositivos (iPhone, iPad) no reconocían esta configuración, y se veía una imagen sin movimiento al scrollear y al repetirse hacía saltos, por lo que tuve que volver a colocar el fondo de color plano" */
-#Vivero {
-  background-color: rgb(117, 248, 176);
+#vivero {
+  background-color: rgb(117, 248, 176); /*Uso de variable*/
 }
 
-#Tienda {
+#tienda {
   background-color: rgb(192, 247, 192);
 }
 
-#Servicios {
+#servicios {
   background-color: rgb(207, 247, 207);
 }
-#Servicios .Servicios {
+#servicios .servicios {
   width: 30%;
 }
-#Servicios p {
+#servicios p {
   font-family: lighter, "Josefin Sans", sans-serif;
   text-align: center;
   padding: 15px;
 }
-#Servicios .icon-serv {
+#servicios .icon-serv {
   text-align: center;
   font-size: xx-large;
   padding: 5px;
   margin: 0;
 }
 
-#Contacto {
+#contacto {
   background-color: rgb(225, 247, 225);
 }
-#Contacto .contacto-whatsapp {
+#contacto .contacto-whatsapp {
   background-color: white;
   padding: 6px;
 }
-#Contacto .Contacto-hijo {
+#contacto .contacto-hijo {
   background-color: white;
   height: 450px;
 }
@@ -401,54 +478,36 @@ article {
   article {
     flex-direction: row;
   }
+
   .imagenCategorias {
     width: 100%;
   }
+
   .Servicios {
     width: 80%;
   }
+
   .contactoMedia {
     flex-direction: row;
   }
+
   .Contacto-hijo {
     width: 30%;
   }
+
   iframe {
     width: 100%;
   }
+
   form input {
     width: 100%;
   }
+
   form textarea {
     width: 100%;
   }
 }
-@media (max-width: 700px) {
-  .navbar ul {
-    display: none;
-    position: absolute;
-    top: 80px;
-    width: 20%;
-    height: 150px;
-    flex-direction: column;
-    justify-content: space-around;
-    background-color: rgb(250, 250, 250);
-  }
-  label.menu {
-    display: block;
-    font-size: 1.7em;
-    color: lightgreen;
-    cursor: pointer;
-  }
-  #check-menu:checked ~ ul {
-    display: block;
-    flex-direction: column;
-  }
-  footer span {
-    width: 100%;
-    text-align: center;
-  }
-}
+
 @media (max-width: 711px) {
   .contactoMedia {
     flex-direction: column;
@@ -461,23 +520,25 @@ article {
     height: 1600px;
   }
 }
+
 @media (max-width: 500px) {
   .navbar ul {
     width: 30%;
   }
 }
+
 @media (max-width: 480px) {
   article {
     flex-direction: column;
   }
+
   .titulo-header {
     font-size: 100%;
   }
 }
+
 @media (max-width: 320px) {
   .navbar ul {
     width: 50%;
   }
 }
-
-/*# sourceMappingURL=styles.css.map */
