--- a/css/queries.css
+++ b/css/queries.css
@@ -1,21 +1,20 @@
 @media (max-width: 945px) {
-  article {
+  /* article {
     flex-direction: row;
-  }
+  } */
 
   .imagenCategorias {
     width: 100%;
   }
 
-  .Servicios {
+  .servicios {
     width: 80%;
   }
 
   .contactoMedia {
     flex-direction: row;
   }
-
-  .Contacto-hijo {
+  .contacto-hijo {
     width: 30%;
   }
 
@@ -32,7 +31,35 @@
   }
 }
 
-@media (max-width: 711px) {
+@media (max-width: 753px) {
+  .navbar ul {
+    display: none;
+    position: absolute;
+    top: 80px;
+    width: 30%;
+    height: 150px;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: rgb(250, 250, 250);
+  }
+
+  label.menu {
+    display: block;
+    font-size: 1.7em;
+    color: lightgreen;
+    cursor: pointer;
+  }
+
+  #check-menu:checked ~ ul {
+    display: block;
+    flex-direction: column;
+  }
+
+  footer span {
+    width: 100%;
+    text-align: center;
+  }
+
   .contactoMedia {
     flex-direction: column;
     margin: 6px;
@@ -40,14 +67,14 @@
   .Contacto-hijo {
     width: 100%;
   }
-  #Contacto {
+  #contacto {
     height: 1600px;
   }
 }
 
 @media (max-width: 500px) {
   .navbar ul {
-    width: 30%;
+    width: 50%;
   }
 }
 
@@ -63,6 +90,6 @@
 
 @media (max-width: 320px) {
   .navbar ul {
-    width: 50%;
+    width: 70%;
   }
 }
