--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,7 @@
 }
 
 .navbar {
-  background-color: rgba(250, 238, 238, 0.979);
+  background-color: rgba(250, 238, 238, 0.9);
 }
 
 .titulo-tamano-4 {
@@ -264,62 +264,30 @@
   font-size: 26px;
 }
 
-@media (max-width: 945px) {
-  article {
-    flex-direction: row;
-  }
-  .imagenCategorias {
-    width: 100%;
-  }
-  .Servicios {
-    width: 80%;
-  }
-  .contactoMedia {
-    flex-direction: row;
-  }
-  .Contacto-hijo {
-    width: 30%;
-  }
-  iframe {
-    width: 100%;
-  }
-  form input {
-    width: 100%;
-  }
-  form textarea {
-    width: 100%;
-  }
+.lightgrey {
+  background-color: lightgrey;
 }
-@media (max-width: 711px) {
-  .contactoMedia {
-    flex-direction: column;
-    margin: 6px;
-  }
-  .Contacto-hijo {
-    width: 100%;
-  }
-  #Contacto {
-    height: 1600px;
-  }
+
+.lightpink {
+  background-color: lightpink;
 }
-@media (max-width: 500px) {
-  .navbar ul {
-    width: 30%;
-  }
+
+.pink {
+  background-color: pink;
 }
-@media (max-width: 480px) {
-  article {
-    flex-direction: column;
-  }
-  .titulo-header {
-    font-size: 100%;
-  }
+
+.grey {
+  background-color: grey;
 }
-@media (max-width: 320px) {
-  .navbar ul {
-    width: 50%;
-  }
+
+.white {
+  color: white;
 }
+
+.black {
+  color: black;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -363,8 +331,9 @@ body a:visited {
   font-size: 1.3em;
   display: inline-block;
 }
-.navbar #check-menu,
-.navbar label.menu {
+
+#check-menu,
+label.menu {
   display: none;
 }
 
@@ -373,12 +342,13 @@ body a:visited {
     tu jardín,
   en un solo lugar
     "*/
-  color: green;
+  color: darkgreen;
   text-align: center;
   font-size: x-large;
   font-style: italic;
   background-color: rgb(250, 250, 250);
-  padding: 15px;
+  background-image: radial-gradient(ellipse 1500px 200px, white, darkgreen);
+  padding: 20px;
   font-family: bolder, "Josefin Sans", sans-serif;
 }
 
@@ -435,7 +405,7 @@ Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el siste
 }
 #contacto .contacto-hijo {
   background-color: white;
-  height: 450px;
+  height: 500px;
 }
 
 .boton-inicio {
@@ -469,76 +439,38 @@ article {
   border-color: rgba(139, 85, 2, 0.548);
   border-style: groove;
   border-radius: 5px;
+  transition: width 0.5s ease;
 }
 .imagenCategorias:hover {
   opacity: 40%;
+  width: 103%;
 }
 
-@media (max-width: 945px) {
-  article {
-    flex-direction: row;
-  }
-
-  .imagenCategorias {
-    width: 100%;
-  }
-
-  .Servicios {
-    width: 80%;
-  }
-
-  .contactoMedia {
-    flex-direction: row;
-  }
-
-  .Contacto-hijo {
-    width: 30%;
-  }
-
-  iframe {
-    width: 100%;
-  }
-
-  form input {
-    width: 100%;
-  }
-
-  form textarea {
-    width: 100%;
-  }
+.grid-item, .introvivero, .aviso {
+  display: inline-block;
+  flex-direction: column;
+  /* background-color: aliceblue; */
+  padding: 20px;
+  height: fit-content;
+  /* overflow: scroll; */
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
-@media (max-width: 711px) {
-  .contactoMedia {
-    flex-direction: column;
-    margin: 6px;
-  }
-  .Contacto-hijo {
-    width: 100%;
-  }
-  #Contacto {
-    height: 1600px;
-  }
+.aviso {
+  background-color: rgb(2, 92, 2);
+  color: white;
+  border-radius: 3px;
+  border: 3px solid;
+  border-color: black;
+  margin-bottom: 0%;
+  margin-top: 2%;
 }
 
-@media (max-width: 500px) {
-  .navbar ul {
-    width: 30%;
-  }
+.introvivero {
+  text-align: center;
+  box-shadow: none;
+  width: 100%;
+  padding-bottom: 0%;
 }
 
-@media (max-width: 480px) {
-  article {
-    flex-direction: column;
-  }
-
-  .titulo-header {
-    font-size: 100%;
-  }
-}
-
-@media (max-width: 320px) {
-  .navbar ul {
-    width: 50%;
-  }
-}
+/*# sourceMappingURL=styles.css.map */
