--- a/css/viverogrid.css
+++ b/css/viverogrid.css
@@ -15,14 +15,14 @@ main {
   background-color: rgb(117, 248, 176);
 }
 
-.aviso {
+/* .aviso {
   background-color: rgb(2, 92, 2);
   color: white;
   padding: 4px;
   border-radius: 3px;
   border: 3px solid;
   border-color: black;
-}
+} */
 
 .grid-container {
   display: grid;
@@ -33,7 +33,7 @@ main {
     "article1 article2"
     "side article3";
   column-gap: 3px;
-  row-gap: 3px;
+  row-gap: 30px;
 }
 
 #vivero {
@@ -59,13 +59,15 @@ main {
   grid-area: article3;
 }
 
-.grid-item {
+/* .grid-item {
   display: inline-block;
   flex-direction: column;
-  background-color: aliceblue;
-  padding: 20px;
-  overflow: scroll;
-}
+  /* background-color: aliceblue; */
+  /* padding: 20px;
+  height: fit-content; */
+  /* overflow: scroll; */
+  /* box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+} */ 
 
 h3 {
   text-align: center;
