tercer proy fin

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -137,7 +137,7 @@ Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el siste
 
   .contacto-hijo {
     background-color: white;
-    height: 500px;
+    height: auto;
   }
 }
 
