--- a/css/queries.css
+++ b/css/queries.css
@@ -15,7 +15,7 @@
     flex-direction: row;
   }
   .contacto-hijo {
-    width: 30%;
+    width: auto;
   }
 
   iframe {
@@ -36,11 +36,11 @@
     display: none;
     position: absolute;
     top: 80px;
-    width: 30%;
+    width: 25%;
     height: 150px;
     flex-direction: column;
     justify-content: space-around;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(250, 238, 238, 0.9);
   }
 
   label.menu {
@@ -74,7 +74,11 @@
 
 @media (max-width: 500px) {
   .navbar ul {
-    width: 50%;
+    width: 40%;
+  }
+
+  #servicios .servicios {
+    width: 100%;
   }
 }
 
@@ -90,6 +94,6 @@
 
 @media (max-width: 320px) {
   .navbar ul {
-    width: 70%;
+    width: 60%;
   }
 }
