--- a/css/styles.css
+++ b/css/styles.css
@@ -405,7 +405,7 @@ Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el siste
 }
 #contacto .contacto-hijo {
   background-color: white;
-  height: 500px;
+  height: auto;
 }
 
 .boton-inicio {
