--- a/css/queries.css
+++ b/css/queries.css
@@ -43,6 +43,10 @@
     background-color: rgb(250, 238, 238, 0.9);
   }
 
+  .navbar ul li {
+    margin: 3px;
+  }
+
   label.menu {
     display: block;
     font-size: 1.7em;
@@ -68,7 +72,7 @@
     width: 100%;
   }
   #contacto {
-    height: 1600px;
+    height: 1700px;
   }
 }
 
