--- a/css/styles.css
+++ b/css/styles.css
@@ -313,6 +313,11 @@ body a:visited {
   background-color: rgb(1, 1, 87);
 }
 
+.viverodiv div {
+  margin-bottom: 0%;
+  padding-bottom: 0%;
+}
+
 .navbar {
   display: flex;
   position: sticky;
@@ -407,6 +412,14 @@ Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el siste
   background-color: white;
   height: auto;
 }
+#contacto .contacto-form {
+  height: 473px;
+}
+#contacto .contacto-form input,
+#contacto .contacto-form textarea {
+  margin: 3px;
+  width: 290px;
+}
 
 .boton-inicio {
   padding: 15px;
@@ -442,11 +455,13 @@ article {
   transition: width 0.5s ease;
 }
 .imagenCategorias:hover {
-  opacity: 40%;
+  opacity: 30%;
   width: 103%;
 }
 
-.grid-item, .introvivero, .aviso {
+.grid-item,
+.introvivero,
+.aviso {
   display: inline-block;
   flex-direction: column;
   /* background-color: aliceblue; */
