--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -140,6 +140,11 @@ Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el siste
   .contacto-whatsapp {
     background-color: white;
     padding: $tamano-gral - 4;
+
+    & p {
+      margin-top: 10%;
+      margin-bottom: 2%;
+    }
   }
 
   .contacto-hijo {
