--- a/css/styles.css
+++ b/css/styles.css
@@ -408,6 +408,10 @@ Intenté colocar imagenes de fondo con propiedad fixed y repeated, pero el siste
   background-color: white;
   padding: 6px;
 }
+#contacto .contacto-whatsapp p {
+  margin-top: 10%;
+  margin-bottom: 2%;
+}
 #contacto .contacto-hijo {
   background-color: white;
   height: auto;
@@ -455,13 +459,11 @@ article {
   transition: width 0.5s ease;
 }
 .imagenCategorias:hover {
-  opacity: 30%;
+  opacity: 40%;
   width: 103%;
 }
 
-.grid-item,
-.introvivero,
-.aviso {
+.grid-item, .introvivero, .aviso {
   display: inline-block;
   flex-direction: column;
   /* background-color: aliceblue; */
