--- a/css/tiendabootstrap.css
+++ b/css/tiendabootstrap.css
@@ -49,7 +49,7 @@ label.menu {
 }
 
 .intro{
-  padding: 20px;
+  padding: 20px 20px 0px 20px;
 }
 
 h2 {
@@ -59,6 +59,11 @@ h2 {
   background-color: rgb(43, 233, 128);
   padding-top: 10px;
   padding-bottom: 10px;
+  font-size: 1.7rem;
+}
+
+.imagenCategorias {
+  width: 80%;
 }
 
 a {
@@ -105,7 +110,7 @@ footer span {
 
 h3, h4, h5 {
   text-align: center;
-  padding-top: 20px;
+  padding-top: 40px;
   padding-bottom: 5px;
 }
 
@@ -131,6 +136,12 @@ h3, h4, h5 {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    background-color: ;
+}
+
+.cols-tienda {
+   display: flex;
+   justify-content: space-between;
 }
 
 @media (max-width: 753px) {
@@ -167,9 +178,9 @@ h3, h4, h5 {
     text-align: center;
   }
 
-  .imagenCategorias {
-  width: 80%;
-  }
+.col{
+  width: 90%;
+}
 }
 
 @media (max-width: 500px) {
